--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Devops engineer with specialized knowledge of test automation,CI/CD, Linux, Windows, CCNA, Perl, Python, Docker, Jenkins, & Ansible</p>
+          <p>Devops engineer with specialized knowledge of Machine Learning, test automation,CI/CD, Linux, Windows, CCNA, Perl, Python, Docker, Jenkins, & Ansible</p>
         </div>
 
         <div class="row">
@@ -111,8 +111,9 @@
               </div>
             </div>
             <p>
-              * Knowledge of Linux, Windows servers and clients, NOC
-              * Knowledge of Virtualization, Docker, Jenkins, Devops, 
+              * Knowledge of Linux, Windows servers and clients,Jira, Agile 
+              * Knowledge of Virtualization, Docker, Jenkins, Devops, Terraform, Ansible
+              * Knowledge of Git/Github, SQL, Kubernetes, Slack, Data Analysis,Grafana, Prometheus, Maven
               * Good customer facing skills, motivated, ability to work under pressure to meet demanding time scales.  
             </p>
           </div>
