--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>AWS SolutionsArchitect &amp; DevOpsEngineer.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Personally i am problem solving oriented, knowledgeable, good team player and well equipped with proven technical skills,
+              Flexible,structured and able to use my own initiative, with the ability to perform under pressure.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -128,7 +128,8 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Always open to try new ways of working, never escape from responsibility and  have a very positive attitude on how the best could provide to the business. Easy to work with and a real team player.
+            Therefore highly adaptable to any business who would benefit from an employee who is loyal, hard working and eager to learn.</p>
         </div>
 
         <div class="row">
@@ -144,7 +145,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="31" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
           </div>
@@ -160,7 +161,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="35" data-purecounter-duration="1" class="purecounter"></span>
               <p>Awards</p>
             </div>
           </div>
@@ -176,7 +177,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p> Have a background as a Data Analyst, having knowledge of Machine Learning. Driven to aspire and learn more.</p>
         </div>
 
         <div class="row skills-content">
