--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>As a DevOps Engineer I work with implementing and maintaining the tools for Continuous Integration and Deployment (CI/CD) to ensure smooth and seamless IT-deliveries with high quality. DevOps approach is growing so rapidly that there is always new material to learn and opportunities to discover how to leverage these in the best possible way. </p>
         </div>
 
         <div class="row">
