--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Suleyman Bat</h4>
+              <p><em>Innovative and deadline-driven AWS Solution Architecter & DevOps Engineer with Machine Learning, Data Science and Analyses experience with Python and developing good working environment from initial concept to final.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Uppsala, Sweden</li>
+                <li>(+46) 259-0845</li>
+                <li>snfeme5@gmail.com</li>
               </ul>
             </div>
 
