--- a/index.html
+++ b/index.html
@@ -254,23 +254,23 @@
               <p><em>Innovative and deadline-driven AWS Solution Architecter & DevOps Engineer with Machine Learning, Data Science and Analyses experience with Python and developing good working environment from initial concept to final.</em></p>
               <ul>
                 <li>Uppsala, Sweden</li>
-                <li>(+46) 259-0845</li>
+                <li>(+46) 72-259-0845</li>
                 <li>snfeme5@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h4>Amazon Web Services(AWS) Solutions Architect &amp; Development and Operations(DevOps) Engineer</h4>
+              <h5>2022 January - 2022 December</h5>
+              <p><em>Clarusway, Tysons, United States</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
               <h5>2010 - 2014</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p>AWS & DevOps tools and services</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -462,7 +462,8 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>AWS Identity & Access Management, EC2, S3, VPC, Cloud Formation, Cloud Watch, Auto Scaling, Databases, 
+                Domain Name System,Route 53, Elastic Beanstalk, SQS,SNS,ECS,EKS,ECR,AWS SDK for Python,20 Hands-on, 5 AWS Projects. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
