--- a/index.html
+++ b/index.html
@@ -259,19 +259,13 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Certifications</h3>
             <div class="resume-item">
-              <h4>Amazon Web Services(AWS) Solutions Architect &amp; Development and Operations(DevOps) Engineer</h4>
-              <h5>2022 January - 2022 December</h5>
-              <p><em>Clarusway, Tysons, United States</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
+              <h4>AWS Certified Solutions Architect Associate</h4>
+              </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>AWS & DevOps tools and services</p>
-            </div>
+              <h4>HashiCorp:Certified Terraform Associate</h4>
+              </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
