--- a/index.html
+++ b/index.html
@@ -270,25 +270,24 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>DevOps Engineer</h4>
+              <h5>January 2022 - January 2023</h5>
+              <p><em>Clarusway LLC., United States, Freelance </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Built and Managed AWS infrastructure As A Code with Cloud Formation in 10+ projects.</li>
+                <li>Worked on Containerization and Virtualization Projects with Docker and Kubernetes. </li>
+                <li>Monitored performance statistics for cloud-hosted environments by using AWS Cloud Watch, Prometheus, Grafana.</li>
+                <li>Built&configured 200+ EC2 instances on AWS, the configuration of elastic load balancer (ELB) for traffic control for the EC2 instances and S3.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Product Master Data Analyst </h4>
+              <h5>Sep 2021 - Jan 2022</h5>
+              <p><em>PIAB AB, Stockholm </em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Collected relevant data from the enterprise resource planning (ERP) system. </li>
+                <li>Used Python algorithms or scripts to process the data and extract relevant information to write scripts that filter, transform and aggregate the data.</li>
+                <li>Used a data analytics platform as a Power BI, to visualize the data and create reports and dashboards that can be shared with other team members.</li>
               </ul>
             </div>
           </div>
